C2LC-540: Fixed dark mode focus styles for stop button.

--- a/src/Themes.scss
+++ b/src/Themes.scss
@@ -561,7 +561,15 @@ body.dark-theme {
     .StopButton:focus {
         box-shadow:
             0 0 0 0.2rem #1E1E1E,
-            0 0 0 0.4rem #FFFFFF;
+            0 0 0 0.4rem #67717E,
+            0 0 0 0.6rem #FFFFFF;
+    }
+
+    .StopButton.StopButton--disabled:focus {
+        box-shadow:
+            0 0 0 0.2rem #9DA4AF,
+            0 0 0 0.4rem #67717E,
+            0 0 0 0.6rem #FFFFFF;
     }
 
     .ProgramSpeedController__slider {
@@ -689,9 +697,7 @@ body.gray-theme {
     }
 
     button.btn.ModalFooter__cancelButton,
-    button.btn.ModalFooter__doneButton,
-    button.btn.ModalWithFooter__secondaryButton,
-    button.btn.ModalWithFooter__primaryButton {
+    button.btn.ModalFooter__doneButton {
         background-color: #aaa;
         color: black;
 
@@ -1441,9 +1447,7 @@ body.contrast-theme {
     }
 
     button.btn.ModalFooter__cancelButton,
-    button.btn.ModalFooter__doneButton,
-    button.btn.ModalWithFooter__secondaryButton,
-    button.btn.ModalWithFooter__primaryButton {
+    button.btn.ModalFooter__doneButton {
         background-color: black;
         color: white;
 
